# project-agents-initializer

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  DESIGN-GUIDELINES.md  LICENSE  README.md  rag.config.yaml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/PRPs/: CLAUDE.md
.claude/agents/: pr-comment-resolver.md  rubber-duck.md
.claude/hooks/: check-docs-sync.sh  check-rag-reindex.sh
.claude/rules/: agent-customizer-agent-files.md  agent-customizer-plugin-skills.md  agent-files.md  compliance-maintenance.md  cursor-agent-files.md  cursor-plugin-skills.md  documentation-sync.md  git-commits.md  plugin-skills.md  plugin-versioning.md  rag-mcp-server.md  rag-routing.md  rag-storage-and-search.md  readme-files.md  reference-files.md  standalone-skills.md  wiki-routing.md
.cursor-plugin/: marketplace.json
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents /: advisor.agent.md  code-reviewer.agent.md  code-reviewer.md  code-simplifier.agent.md  (+20 more)
agents/: codebase-analyzer.md  file-evaluator.md  scope-detector.md
docs/: CLAUDE.md  README.md  a-guide-to-agents.md  a-guide-to-claude.md  claude-memory-tool-docs.md  how-claude-remembers-a-project.md  prompt-engineering-guide.md
rag/: .gitignore  CLAUDE.md  README.md  __main__.py  chunker.py  cli.py  code_chunker.py  config.py  embedder.py  index.py  pyproject.toml  search.py  server.py  store.py
skills/: README.md  docs-drift-manifest.md
wiki/: CLAUDE.md  Welcome.md
(+532 files in other folders)
