[project]
name = "rag-local"
version = "0.1.0"
description = "Local RAG knowledge base with SQLite, sqlite-vec, and FastMCP"
requires-python = ">=3.11"
dependencies = [
    "sqlite-vec>=0.1.9",
    "fastembed>=0.8",
    "mcp[cli]>=1.27",
    "pyyaml>=6",
    "tree-sitter-language-pack>=1.5",
]

[project.scripts]
rag = "rag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
